updates to catalog

--- a/Pantocrator.html
+++ b/Pantocrator.html
@@ -27,27 +27,27 @@
     </header>
 
     <div class="title">
-        <h1>Home</h1>
+        <h1>Christ the Ruler of the Universe</h1>
     </div>
 
     <section class="container">
         
         <div class="text">
-            <p>There are countless Icons that are venerated in the Orthoodox church. The goal of this website is to share many of the beautiful Icons that the church has to offer.</p>
+            <p>The Pantocrator Icon dates back to the 6th century. Pantocrator means "ruler of the universe" in greek. It is one of the oldest known icons that has been preserved. </p>
         </div>
 
-            <img class="card" src="/img/Pantocrator.jpg" alt="Holy monk Paisios">
+            <img class="card" src="/img/Pantocrator.jpg" alt="Pantocrator Icon">
     </section>
 
         <div class="title">
-            <h1>enjoy!</h1>
+            <h1>Where the icon is stored</h1>
         </div>
 
         <section class="container">
             <div class="text">
-            <p>Enjoy!</p>
+            <p>The Icon is located in Sinai, Egypt at the Monastery of Saint Catherine. The monastery was built between 548 and 565, and is the world's oldest continuously inhabited Christian monastery. The monastery is built around what is believed to be the burning bush seen by moses.It also encloses the Well of Moses where he met his wife. The well is still functional and is used to draw water for the monastery. This holy place also has been referred to as the oldest known libray, housing works such as Codex Sinaiticus and the Syriac Sinaiticus.</p>
             </div>
-            <img class="card" src="/img/seeds.jpg" alt="christ icon laying out the seeds">
+            <img class="card" src="/img/CatherinesMonastery.jpg" alt="christ icon laying out the seeds">
 
         </section>
         
