--- a/catalog.html
+++ b/catalog.html
@@ -29,11 +29,27 @@
     <section class="container">
         <!-- <h1>view our selection</h1> -->
         <div class="card">
-            <img src="img/Ostrabramska.jpg" alt="Denim Jeans" style="width:100%">
+            <img src="img/Ostrabramska.jpg" alt="Ostrobramska Icon" style="width:100%">
             <h1>Ostrabramska</h1>
             <p class="price"></p>
             <p>Our Lady of the Gate of Dawn</p>
             <p><button><a href="Ostrabramska.html">View</a></button></p>
+          </div>
+
+          <div class="card">
+            <img src="img/Pantocrator.jpg" alt="Pantocrator Icon" style="width:100%">
+            <h1>Christ Pantocrator</h1>
+            <p class="price"></p>
+            <p>Christ Ruler of the Universe</p>
+            <p><button><a href="Pantocrator.html">View</a></button></p>
+          </div>
+
+          <div class="card">
+            <img src="img/Panagia.jpg" alt="Panagia Icon" style="width:100%">
+            <h1>Virgin of the Passion</h1>
+            <p class="price"></p>
+            <p>Our lady of perpetual help</p>
+            <p><button><a href="Panaghia.html">View</a></button></p>
           </div>
           
 
